# sqlfluff-plugin-no-select-star

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tagpr.yml  test.yml
no_select_star_rules/: __init__.py  rule_no_select_star_ns01.py
tests/: test_rule_no_select_star_ns01.py
