[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlfluff-plugin-no-select-star"
version = "0.1.0"
description = "SQLFluff plugin to forbid wildcard projections (SELECT *)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Shinya Takimoto" }
]
keywords = ["sqlfluff", "plugin", "linter", "sql", "select-star", "wildcard", "dbt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.9"
dependencies = [
    "sqlfluff>=3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[project.urls]
Repository = "https://github.com/takimo/sqlfluff-plugin-no-select-star"

[project.entry-points.sqlfluff]
no_select_star = "no_select_star_rules"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
